// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`$toData: $id 1`] = `"data->>'id'"`;

exports[`$toData: $id = 42 1`] = `"data->>'id' = 42"`;

exports[`$toData: $phone.home = 42 1`] = `"data->>'phone.home' = 42"`;

exports[`$toData: $phone_home = 42 1`] = `"data->>'phone_home' = 42"`;

exports[`$toData: $name = "foo" and $age = 42 1`] = `"data->>'name' = "foo" and data->>'age' = 42"`;

exports[`$toData: $.foo 1`] = `"$.foo"`;

exports[`sql: where name 1`] = `
{
  "parts": [
    "where data->>'name' = ",
    "",
  ],
  "values": [
    "yoda",
  ],
}
`;

exports[`sql: where name and age 1`] = `
{
  "parts": [
    "where data->>'name' = ",
    " and data->>'age' = ",
    "",
  ],
  "values": [
    "yoda",
    42,
  ],
}
`;

exports[`sql: limit 1`] = `
{
  "parts": [
    "limit ",
    "",
  ],
  "values": [
    42,
  ],
}
`;

exports[`all 1`] = `
[
  "yoda",
  "grogu",
]
`;

exports[`remove 1`] = `
[
  "luke",
  "leia",
]
`;

exports[`remove 2`] = `[]`;

exports[`patch 1`] = `
[
  "luke",
  "leia",
]
`;

exports[`patch 2`] = `
[
  "dead",
  "dead",
]
`;

exports[`replace 1`] = `
[
  {
    "age": 42,
    "gender": "male",
    "name": "luke",
  },
  {
    "age": 42,
    "gender": "female",
    "name": "leia",
  },
]
`;

exports[`replace 2`] = `
[
  {
    "age": 42,
    "name": "dead",
  },
  {
    "age": 42,
    "name": "dead",
  },
]
`;

exports[`custom update age + 1 1`] = `
[
  {
    "age": 42,
    "gender": "male",
    "name": "luke",
  },
  {
    "age": 42,
    "gender": "female",
    "name": "leia",
  },
]
`;

exports[`custom update age + 1 2`] = `
[
  {
    "age": 43,
    "gender": "male",
    "name": "luke",
  },
  {
    "age": 43,
    "gender": "female",
    "name": "leia",
  },
]
`;
